# dashboard

./: Cargo.toml
api/: Cargo.toml  README.md
api/src/: main.rs
api/src/command/: workers.rs
dashboard/: .gitignore  package.json
dashboard/src/: index.js  reducers.js  routes.js
dashboard/src/actions/: actionTypes.js  workerActions.js
dashboard/src/api/: workerApi.js
dashboard/src/components/Sidebar/: Sidebar.js
dashboard/src/components/Workers/: WorkerList.js
dashboard/src/reducers/: initialState.js  workers.js
dashboard/src/views/Dashboard/: Dashboard.js
dashboard/src/views/Workers/: Workers.js  package.json
